--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,19 @@
     transform: rotate(360deg);
   }
 }
+
+#container-post {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.post {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid steelblue;
+  padding: 10px;
+  width: 400px;
+}
